ForwardPort Direct Call Feature
Patchset1 : Fixed tabs

Change-Id: I75dbde08be65093acc02f09d509086379bd3cd51

Conflicts:
	res/values/strings.xml
	res/xml/preferences.xml
	src/com/android/mms/ui/MessagingPreferenceActivity.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -965,5 +965,9 @@
     <string name="add_recipients">Add recipients</string>
     <string name="add_recipients_positive_button">Add</string>
 
+	<!-- <Direct Call> -->
+	<string name="direct_call_title">Direct Call</string>
+    <string name="direct_call_summary">Picking up the phone calls the current contact</string>
+
     <!-- **** CYANOGENMOD ADDITIONS END **** -->
 </resources>
