--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -969,5 +969,10 @@
 	<string name="direct_call_title">Direct Call</string>
     <string name="direct_call_summary">Picking up the phone calls the current contact</string>
 
+	<!-- Message Font size -->
+    <string name="pref_title_mms_message_font_size">Message font size</string>
+    <string name="pref_summary_mms_message_font_size">Change font size of message view</string>
+    <string name="pref_dialogtitle_mms_message_font_size">Select font size</string>
+
     <!-- **** CYANOGENMOD ADDITIONS END **** -->
 </resources>
