--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -907,5 +907,10 @@
     <!-- Settings item description for boolean SMS Split 160 characters setting -->
     <string name="pref_summary_sms_split_counter">Adds counter to message ex. (1/2)</string>
 
+    <!-- Message signature -->
+    <string name="msg_sig_title">Signature</string>
+    <string name="msg_sig_summary">Set a custom Signature for messages</string>
+    <string name="msg_sig_enter_text">Enter signature text</string>
+
     <!-- **** CYANOGENMOD ADDITIONS END **** -->
 </resources>
