--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -876,14 +876,16 @@
     <string name="pref_extra_settings">Extra settings</string>
     <string name="pref_char_settings">Char settings</string>
 
-    <!-- Strip unicode -->
-    <string name="pref_title_strip_unicode">Strip unicode</string>
-    <string name="pref_summary_strip_unicode">Substitute common characters that are not supported in 160 character SMS messages</string>
-
     <!-- Enable emojis -->
     <string name="pref_title_enable_emojis">Emoji support</string>
     <string name="pref_summary_enable_emojis">Enable support for unicode emojis, a set of 471 nice emoticons</string>
     <string name="menu_insert_emoji">Insert emojis</string>
+
+	<!-- Strip unicode -->
+    <string name="pref_title_unicode_stripping">Strip unicode</string>
+    <string name="pref_unicode_stripping_leave_intact">Leave characters intact</string>
+    <string name="pref_unicode_stripping_non_encodable">Strip non-encodable characters</string>
+    <string name="pref_unicode_stripping_all">Strip all unicode characters</string>
 
     <!-- Full timestamps -->
     <string name="pref_title_mms_full_timestamp">Full timestamps</string>
