--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -965,14 +965,18 @@
     <string name="add_recipients">Add recipients</string>
     <string name="add_recipients_positive_button">Add</string>
 
-	<!-- <Direct Call> -->
-	<string name="direct_call_title">Direct Call</string>
+    <!-- <Direct Call> -->
+    <string name="direct_call_title">Direct Call</string>
     <string name="direct_call_summary">Picking up the phone calls the current contact</string>
 
 	<!-- Message Font size -->
     <string name="pref_title_mms_message_font_size">Message font size</string>
     <string name="pref_summary_mms_message_font_size">Change font size of message view</string>
     <string name="pref_dialogtitle_mms_message_font_size">Select font size</string>
+
+    <!-- Text area -->
+    <string name="pref_text_area_size_title">Text area size</string>
+    <string name="pref_text_area_size_summary">Set text area to <xliff:g id="lines">%1$s</xliff:g> lines</string>
 
     <!-- **** CYANOGENMOD ADDITIONS END **** -->
 </resources>
