Prompt users Mms can't receive msgs if storage is full
Telephony framework will report operators Sms Memory is full if
Device storage running out. Then operators won't send the target
any messages until storage is available next time.

Refer to
frameworks/opt/telephony/src/java/com/android/internal/telephony/SmsStorageMonitor.java

Change-Id: I7712355eac17c6adf3ab51ddb0907d52cb7759ee
Signed-off-by: Roger Chen <cxr514033970@gmail.com>

Conflicts:
	res/values/strings.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -777,6 +777,9 @@
 
     <!-- **** CARBON ADDITIONS START **** -->
 
+    <string name="storage_warning_title">"Your phone's storage is full"</string>
+    <string name="storage_warning_content">"You won't receive new SMS/MMS messages"</string>
+
     <!-- Message options - Add SMS to calendar -->
     <string name="menu_add_to_calendar">Add to calendar</string>
 
